@@ -9,9 +9,10 @@
     <string id="30006">Enable trailers from HD-Trailers.net</string>
     <string id="30007">IMDb Poster &amp; Actor Thumb(s) Size</string>
     <string id="30008">Preferred Title Language from</string>
+	<string id="30050">Preferred certification from</string>
 	<!-- RT rating settings labels -->
 	<string id="30100">Rotten Tomatoes</string>
-	<string id="30105">Enable ratings from Rotten Tomatoes (IMDb ratings used if off)</string>
+	<string id="30105">Enable ratings from Rotten Tomatoes</string>
 	<string id="30110">Rating generated using</string>
 	<string id="30115">Use the score aggregated from</string>
 </strings>
